# pytest-manual-marker

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  pytest_manual_marker.py  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  pythonapp.yml
src/pytest_manual_marker/: __init__.py
testing/: test_example.py  test_manual.py
