[build-system]
requires = [
    "hatchling>=1.3.1",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "pytest-manual-marker"
description = "pytest marker for marking manual tests"
readme = "README.md"
license = "mit"
requires-python = ">=3.7"
authors = [
    { name = "Ronny Pfannschmidt", email= "rpfannsc@redhat.com"},
    { name = "Martin Kourim" , email="mkourim@redhat.com" },
]
keywords = [
    "py.test",
    "pytest",
    "testing",
    "manual",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7",
    "regendoc>=0.9",
]
dynamic = [
    "version",
]

[project.entry-points.pytest11]
manual_marker = "pytest_manual_marker"

[project.urls]
Homepage = "https://github.com/RonnyPfannschmidt/pytest-manual-marker"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
