[metadata]
name = pytest_manual_marker
description = pytest marker for marking manual tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RonnyPfannschmidt/pytest-manual-marker
author_email = Ronny Pfannschmidt <rpfannsc@redhat.com>, Martin Kourim <mkourim@redhat.com>
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
keywords =
    py.test
    pytest
    testing

[options]
packages = find:
install_requires =
    pytest>=6
    regendoc>=0.9
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    manual_marker = pytest_manual_marker

[flake8]
max_line_length = 88
max-complexity = 10
